2009-01-21  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl.in: Incremented version of vfs::zip
	* library/zipvfs.tcl (zip::EndOfArchive): Fixed Schelte Bron's
	[Bug 2256740]. Trigger on outermost magic sequence, not an inner
	sequence from a n uncompressed zip archive stored in the zip.

2008-12-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/mk4vfs.tcl: Fix vfs::ztream to support 8.6 core zlib
	* library/vfslib.tcl:

2008-12-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/zipvfs.tcl: Cleaned up the zip stream read function to
	conform to the published specification more closely and avoid
	excess calls to the stat function.
	* pkgIndex.tcl.in: Incremented version of vfs::zip

2008-12-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: change VPATH to ensure that configure munging of
	VPATH when configuring in the main directory does not break it.
	[Bug 2389466]

2008-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/vfsFtp.test: correct unmount ordering

	* library/tclprocvfs.tcl (vfs::ns::matchindirectory): Handle the
	single item dir/file, and don't add a slash for single proc.

2008-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/vfs.test (vfs-2.3,2.4,4.1): add tests for mount command
	not existing and for an issue with .. resolution.

	* pkgIndex.tcl.in, library/tclprocvfs.tcl: vfs::ns bump to 0.5.1
	Correct glob of namespaces. [Bug 1280914]

	* generic/vfs.c (TCLVFS_POSIXERROR): note use of -1 return code to
	indicate a posix error passing through.

	* tclconfig/tcl.m4, generic/vfs.c, doc/vfs.n:
	* configure, configure.in: update to TEA 3.7, bump vfs to v1.4

	* pkgIndex.tcl.in: this is now the sole pkgIndex.tcl script.
	vfs::loadvfs updated to source vfsUtils.tcl right after loading
	the dll.  Package versions updated, removed mk4vfs and zipvfs
	compat packages.

	* Makefile.in, win/makefile.vc: update for removed files

	* library/template/*: add package provide 1.5.2 for each template
